Atualizadas algumas informacoes na secao SOBRE.

--- a/index.html
+++ b/index.html
@@ -61,16 +61,19 @@
                 <div class="text" id="texto-1">
                     <h1 class="title-text">Olá Mundo !!</Ol></h1>
                     <h4 class="title-subtitle">Aqui um pouco sobre mim !</h4>
-                    <p>
-                        Olá, sou Daniel <br>
-                        Estou estudando Desenvolvimento Web com muita dedicação, já estou em um nível intermediário e a cada dia melhor.
-                        <br>
-                        Tenho muita experiência em vendas, administração de empresas e treinamento de equipes. Facilidade de comunicação, aprendizado rápido. Sou sempre muito solicito e dedicado. 
-                        <br>
-                        Fiz curso de inglês regular em Boston-MA nos EUA juntamente com um curso de Inglês voltado a negócios internacionais entre outros cursos em áreas específicas.
-
-                    </p>
-                    <p>Conhecimentos básicos: HTML5, CSS3, Javascrip, Python, Bootstrap, PHP, mySQL, entre outras tecnologias....</p>
+                    <div>
+                        <h5>Olá, sou Daniel</h5>
+                        <p>Estou estudando Desenvolvimento Web com muita dedicação, já estou em um nível intermediário e a cada dia melhor.
+                        </p>
+                        <p>Por ainda não ter nenhuma experiência na área de desenvolvimento web estou buscando qualquer tipo de oportunidade para começar minha carreira nesta área.
+                        </p>
+                        <p>Tenho muita experiência em vendas, administração de empresas e treinamento de equipes. Facilidade de comunicação, aprendizado rápido. Sou sempre muito solicito e dedicado. 
+                        </p>
+                        <p>Fiz curso de inglês regular em Boston-MA nos EUA juntamente com um curso de Inglês voltado a negócios internacionais entre outros cursos em áreas específicas.
+                        </p>
+                    </div>
+                    <p
+                    >Conhecimentos básicos: HTML5, CSS3, Javascrip, Python, Bootstrap, PHP, Ajax, Apache, mySQL, jQuery, entre outras tecnologias....</p>
                     <p>
                         <!--<a href="#" target="_blank">Link para Meu currículo.pdf</a>
                         <br>
